# World-Domination-Bot

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  admins.txt  docker-compose.yml  game_classes.py  help.txt  init_database.sql  keyboards.py  logins.txt  main.py  messages.py  page.py  preset.txt  pyproject.toml  requirements.txt  rules.txt  run.bat  test.db  test.py
__pycache__/: .game_classes.cpython-312.pyc.swp  .game_classes.cpython-312_BASE_1913.pyc.swp  .game_classes.cpython-312_LOCAL_1913.pyc.swp  .game_classes.cpython-312_REMOTE_1913.pyc.swp
app/: middleware.py  utils.py
app/filters/: admin.py  buttons.py  state.py
app/handlers/: lobby.py  main_page.py
database/: __main__.py  base_client.py  client.py  config.py  models.py  schemas.py
database/clients/: __init__.py  actions.py  game.py  info.py  user.py
excel files/: game 1 results.xlsx
game/: config.py  schemas.py
presets/: exception codes.json  help.txt  messages.json  pack.py  packs.json  planets_and_cities.json
round results/fonts/: MusticaproSemibold.eot
round results/presets/: bar preset.txt  chart begin preset.txt  ending preset.txt  head.txt  panel settings.txt  planet panel.txt  style.css  upper-half settings.txt
storage/: Dockerfile  config.py  redis.conf  schemas.py  users.acl
storage/clients/: __init__.py  actions.py  base.py  messages.py
template/: results.html  style.css
test/: Dockerfile
test/database/: conftest.py  test_base_client.py
test/database/clients/: test_actions.py  test_game.py  test_info.py  test_user.py
test/database/steps/: getters.py  setters.py
test/storage/: conftest.py
test/storage/clients/: test_messages.py  (+1 more)
