[project]
name = "world-domination-bot"
version = "1.0"
description = "World Domination Bot in Telegram"
authors = [
    {name = "Nikita Klinov"}
]
readme = "README.md"
requires-python = ">=3.11"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aiofiles = "23.2.1"
aiogram = "3.11.0"
aiohappyeyeballs = "2.3.5"
aiohttp = "3.10.3"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
APScheduler = "3.11.0"
attrs = "24.2.0"
certifi = "2024.7.4"
DAWG-Python = "0.7.2"
docopt = "0.6.2"
et-xmlfile = "1.1.0"
frozenlist = "1.4.1"
idna = "3.7"
magic-filter = "1.0.12"
multidict = "6.0.5"
num2words = "0.5.13"
numpy = "2.0.1"
openpyxl = "3.1.5"
pandas = "2.3.1"
psycopg = "3.2.9"
pydantic = "2.8.2"
pydantic_core = "2.20.1"
pymorphy3 = "2.0.2"
pymorphy3-dicts-ru = "2.4.417150.4580142"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.1"
setuptools = "72.1.0"
six = "1.16.0"
typing_extensions = "4.12.2"
tzdata = "2024.1"
yarl = "1.9.4"
sqlalchemy = "^2.0.42"
pydantic-settings = "^2.10.1"
ring = "^0.10.1"
ruff = "^0.12.9"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.1.0"
async-lru = "^2.0.5"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
sqlalchemy-utils = "^0.41.2"
pytest-postgresql = "^7.0.2"
pytest-lazy-fixtures = "^1.3.4"
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
log_level = "DEBUG"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)%s [%(levelname)s]: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"